--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,14 +26,23 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.android.support:support-annotations:28.0.0'
 
     implementation 'com.android.support:recyclerview-v7:26.+'
     implementation 'com.android.support:cardview-v7:26.+'
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    //Retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
+//    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    //RxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'io.paperdb:paperdb:2.6'
